# crosspub

./: .gitignore  Cargo.toml  Makefile  PLANNING.md  README.md  config.toml
src/: about.rs  config.rs  contexts.rs  crosspub.rs  frontmatter.rs  gemtext.rs  html.rs  main.rs  post.rs  settings.rs  topic.rs
templates/: index.html  post.html
templates/gemini/: about.gmi  atom-entry.xml  atom-feed.xml  index.gmi  post.gmi  postlist.gmi  topic.gmi
templates/gmi/: post.gmi  topic.gmi
templates/html/: about.html  atom-entry.xml  atom-feed.xml  index.html  post.html  postlist.html  style.css  topic.html
