[package]
name = "crosspub"
version = "0.5.4"
authors = ["<hiroantag@protonmail.com>"]
license = "MIT"
readme = "README.md"
description = "A tool for users on tilde servers to cross publish blog posts to HTML and Gemini"
homepage = "https://github.com/genericlastname/crosspub"
repository = "https://github.com/genericlastname/crosspub"
keywords = ["cli", "server", "blog"]
categories = ["command-line-utilities"]
edition = "2021"

[dependencies]
clap = { version = "3.1", features = ["derive"] }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tinytemplate = "1.2.1"
toml = "0.5"
xdg = "2.4"
